appId: com.lfgtavora.poketcg.demo
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "set_card_.*"
      index: 0
    timeout: 30000
- tapOn:
    id: "set_card_.*"
    index: 0
- extendedWaitUntil:
    visible:
      id: "set_cards_grid"
    timeout: 30000
- extendedWaitUntil:
    visible:
      id: "card_preview_.*"
      index: 0
    timeout: 30000
- scrollUntilVisible:
    element:
      id: "card_pos_20"
    direction: DOWN
    timeout: 30000
- assertVisible:
    id: "set_cards_grid"
